--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -4,6 +4,7 @@
         background-color: #fff;
         padding-bottom: 30px;
       }
+
       #main-jumbotron {
         background: url(<%= asset_path 'main_bg_image2.jpg' %>)
                     repeat-x transparent 50% 50%;
@@ -20,6 +21,7 @@
       }
     </style>
 
+<% content_for :header_area do %>
     <!-- jumbotron -->
     <div id="main-jumbotron" class="jumbotron wrapped-content">
       <div class="container">
@@ -39,14 +41,9 @@
     </div>
     <!-- END jumbotron -->
 
+<%end%>
 
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div id="nav_circle" class="container marketing text-center">
-
+    <div id="nav_circle" class="text-center">
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-sm-4">
@@ -68,8 +65,4 @@
           <p><a class="btn btn-success" href="#" role="button">进入 &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
       </div><!-- /.row -->
-
-
-      <!-- /END THE FEATURETTES -->
-
-    </div><!-- /.container -->
+    </div><!-- /.nav_circle-->
