修改了主页的图片shake处理

--- a/app/assets/stylesheets/front.css.scss
+++ b/app/assets/stylesheets/front.css.scss
@@ -4,6 +4,8 @@
 @import "ionicon/ionicons";
 // AdminLTE关联
 @import "adminlte/AdminLTE";
+@import "csshake/csshake";
+
 @import "front/car_override";
 // 前端的通用样式
 @import "common/base";
