--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -23,7 +23,9 @@
             <li class="<%= current_nav_class(front_station_index_path)%>">
               <%= link_to Station.model_name.human, front_station_index_path %>
             </li>
-            <li><a href="#">提问留言</a></li>
+            <li class="<%= current_nav_class(front_question_index_faq_path)%> <%= current_nav_class(front_question_index_uaq_path)%>">
+              <%= link_to "提问留言", front_question_index_faq_path %>
+            </li>
           </ul>
           <div id="user-action" class="pull-right">
             <% if current_user %>
