常见问题前台翻页处理

--- a/app/assets/stylesheets/front/common.css.scss
+++ b/app/assets/stylesheets/front/common.css.scss
@@ -221,3 +221,11 @@ a.list-group-item:hover > * {
   margin-left:20px;
   padding-left: 10px;
 }
+
+// -----------------------------------------
+// 翻页
+// -----------------------------------------
+.car-page-entries-info {
+  margin: 25px 10px 0px 0px;
+}
+
