--- a/app/views/front/question/index_faq.html.erb
+++ b/app/views/front/question/index_faq.html.erb
@@ -9,7 +9,7 @@
         <form action='<%= front_question_index_faq_path%>' method='get'>
           <div class="input-group input-group-sm col-sm-5">
             <input type="text" class="form-control" name='name_faq' 
-              value="<%= params['name_faq']%>">
+              value="<%= params['name_faq']%>" placeholder=<%=t('view.label.find_by_keyword')%>>
             <span class="input-group-btn">
               <button class="btn btn-info btn-flat" type="submit">
                 <i class='fa fa-search-plus'></i>
@@ -21,7 +21,7 @@
       <div class='car-result'>
         <div class="car-nav-tabs-custom">
           <ul class="nav nav-tabs">
-            <li class="active"><%= link_to "常见问题", front_question_index_faq_path %></li>
+            <li class="active"><%= link_to Faq.model_name.human, front_question_index_faq_path %></li>
             <li><%= link_to "用户提问", front_question_index_uaq_path %></li>
           </ul>
           <div class="header">
