--- a/app/assets/stylesheets/back.css.scss
+++ b/app/assets/stylesheets/back.css.scss
@@ -3,6 +3,7 @@
 @import "ionicon/ionicons";
 // AdminLTE关联
 @import "adminlte/AdminLTE";
+@import "common/base";
 // 后台的通用样式
 @import "back/common";
 @import "wice_grid";
