--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -46,9 +46,12 @@
                   </ul>
               </div>
             <% else %>
-                <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal">登录</a>
-                <a style="margin: 0px 8px;">|</a>
-                <%= link_to "注册", new_user_registration_path, class: "btn btn-success btn-sm" %>
+              <%= link_to t('view.action.sign_in'), new_user_session_path,
+                class: "btn btn-success btn-sm" %>
+              <a id="btn_sign_in" class="btn btn-danger btn-sm"><%= t('view.action.sign_in')%></a>
+              <a style="margin: 0px 8px;">|</a>
+              <%= link_to t('view.action.sign_up'), new_user_registration_path,
+                class: "btn btn-success btn-sm" %>
             <% end %>
           </div>
         </div><!--/.nav-collapse -->
@@ -56,45 +59,6 @@
     </div>
     <!-- END Fixed navbar -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-  
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">请登录</h4>
-          </div>
-          <div class="modal-body">
-            <form class="form-horizontal" role="form">
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="用户名">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="密码">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> 记住我
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary">登录</button>
-          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+  <% if !current_user %>
+    <%= render "front/common/sign_in_modalbox" %> 
+  <% end %>
