--- a/app/views/front/common/_sign_in_modalbox.html.erb
+++ b/app/views/front/common/_sign_in_modalbox.html.erb
@@ -7,7 +7,7 @@
           </div>
           <div class="modal-body">
             <div class="car-nav-tabs-custom">
-              <ul class="nav nav-tabs" role="tablist">
+              <ul id="car-tab-sign-in" class="nav nav-tabs" role="tablist">
                 <li class="active">
                   <a href="#tab_email" role="tab" data-toggle="tab">账号登录</a>
                 </li>
