我要提问 ajaxform 完成

--- a/app/views/front/question/index_faq.html.erb
+++ b/app/views/front/question/index_faq.html.erb
@@ -23,6 +23,9 @@
           <ul class="nav nav-tabs">
             <li class="active"><%= link_to Faq.model_name.human, front_question_index_faq_path %></li>
             <li><%= link_to "用户提问", front_question_index_uaq_path %></li>
+            <div class="pull-right">
+              <a id="have_question" class="btn btn-danger">我要提问</a>
+            </div>
           </ul>
           <div class="header">
             <%= t("view.label.total_count", count: @faqs.total_count) %>
@@ -54,4 +57,8 @@
     </div>
   </div>
 </div><!-- /.row -->
+
+<% if current_user %>
+  <%= render "front/common/have_question_modalbox" %>
+<% end %>
 
