前台用户问题一览画面完成

--- a/app/views/front/question/index_faq.html.erb
+++ b/app/views/front/question/index_faq.html.erb
@@ -24,7 +24,7 @@
             <li class="active"><%= link_to Faq.model_name.human, front_question_index_faq_path %></li>
             <li><%= link_to "用户提问", front_question_index_uaq_path %></li>
             <div class="pull-right">
-              <a id="have_question" class="btn btn-danger">我要提问</a>
+              <a id="have_question" class="btn btn-danger"><%= t('view.action.have_question')%></a>
             </div>
           </ul>
           <div class="header">
